# TUDA-PMPP-CudaMemVis

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
lib/glad-ogl-3.0/include/glad/: glad.h
lib/glad-ogl-3.0/src/: glad.c
lib/glad-ogl-320c/include/glad/: glad.h
lib/glad-ogl-320c/src/: glad.c
lib/imgui-1.85-opengl3-glfw/: imgui-cmake.txt  imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
resources/setup/: imgui.ini
resources/shaders/: amogus.fs  amogus.vs
src/: Application.cpp  Application.h  exvis.h  main.cpp  testfile
src/gui/: GUIElement.cpp  GUIElement.h  MemoryBlock.cpp  MemoryBlock.h
src/platform/: GLAsset.cpp  GLAsset.h  GLBindable.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  TraceFile.cpp  TraceFile.h  window.cpp  window.h
